Style: fix wrong padding in dialog.

--- a/src/scss/main/_layout.scss
+++ b/src/scss/main/_layout.scss
@@ -233,3 +233,12 @@ main {
   min-height: $commentbox-height;
   padding: $padding-medium;
 }
+
+
+/*======================================
+                OTHERS
+=======================================*/
+
+md-dialog-content {
+  padding: $padding-medium;
+}
